Code refactoring and postman collection